--- a/chomping-glass/.env
+++ b/chomping-glass/.env
@@ -1,1 +1,2 @@
-REACT_APP_RPC_URL=https://staging-rpc.dev.eclipsenetwork.xyz
+# REACT_APP_RPC_URL=https://staging-rpc.dev.eclipsenetwork.xyz
+REACT_APP_RPC_URL=https://staging-rpc.dev2.eclipsenetwork.xyz
